# Home_Automation

./: .gitignore  CLAUDE.md  README.md
Python/: server.py
firmware/weather-station/: platformio.ini
firmware/weather-station/src/: display.cpp  display.h  formulas.cpp  formulas.h  main.cpp  sensor.cpp  sensor.h
home-server/: README.md  REQUIREMENTS.md  pyproject.toml
home-server/src/homeserver/: main.py  models.py  storage.py
home-server/tests/: test_main.py
