[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homeserver"
version = "0.1.0"
description = "Backend du hub domotique local (cat fountain, weather station, mini bar)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "David" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "paho-mqtt",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/homeserver"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
